--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -245,56 +245,58 @@
    },
    "outputs": [],
    "source": [
-    "def matching_proportion(df: pd.DataFrame) -> float:\n",
+    "def matching_proportion(df: pd.DataFrame, config: dict) -> float:\n",
     "    \"\"\"\n",
-    "    Calculate and print the proportion of matching case IDs.\n",
+    "    Calculate and print the proportion of matching config['tf_output'] values.\n",
     "\n",
-    "    :param df: DataFrame containing case IDs.\n",
-    "    :return: Proportion of matching case IDs.\n",
+    "    :param df: DataFrame containing config['tf_output'] values.\n",
+    "    :param config: Configuration parameters.\n",
+    "    :return: Proportion of matching config['tf_output'] values.\n",
     "    \"\"\"\n",
     "    proportion_matching = 0\n",
     "    \n",
     "    # Check if the DataFrame is not empty before calculating the proportion\n",
     "    if not df.empty:\n",
-    "        # Count the number of rows where 'Determined Case ID' and 'Actual Case ID' match\n",
-    "        matching_rows = df[df['Determined Case ID'] == df['Actual Case ID']]\n",
+    "        # Count the number of rows where 'Determined config['tf_output']' and 'Actual config['tf_output']' match\n",
+    "        matching_rows = df[df[f\"Determined {config['tf_output']}'\"] == df[f\"Actual {config['tf_output']}'\"]]\n",
     "\n",
     "        # Calculate the proportion of matching rows\n",
     "        proportion_matching = len(matching_rows) / len(df)\n",
     "\n",
-    "        print(f\"In the repaired log, {len(matching_rows)} of {len(df)} case ID{'s' if len(df) != 1 else ''} \"\n",
-    "              f\"{'was' if len(matching_rows) == 1 else 'were'} determined correctly. \"\n",
-    "              f\"This corresponds to an accuracy of {proportion_matching:.2%}.\")\n",
+    "        print(f\"In the repaired log, {len(matching_rows)} of {len(df)} {config['tf_output']} \"\n",
+    "              f\"value{'s' if len(df) != 1 else ''} {'was' if len(matching_rows) == 1 else 'were'} determined correctly.\"\n",
+    "              f\" This corresponds to an accuracy of {proportion_matching:.2%}.\")\n",
     "    else:\n",
     "        print(\"DataFrame is empty. Cannot calculate accuracy.\")\n",
     "    \n",
     "    return proportion_matching\n",
     "\n",
     "\n",
-    "def factual_matching_proportion(df: pd.DataFrame) -> float:\n",
+    "def factual_matching_proportion(df: pd.DataFrame, config: dict) -> float:\n",
     "    \"\"\"\n",
-    "    Calculate and print the proportion of factually matching case IDs.\n",
+    "    Calculate and print the proportion of factually matching config['tf_output'] values.\n",
     "    \n",
-    "    :param df: DataFrame containing case IDs.\n",
-    "    :return: Proportion of factually matching case IDs.\n",
+    "    :param df: DataFrame containing config['tf_output'] values.\n",
+    "    :param config: Configuration parameters.\n",
+    "    :return: Proportion of factually matching config['tf_output'] values.\n",
     "    \"\"\"\n",
     "    proportion_factual_matching = 0\n",
     "    \n",
     "    # Check if DataFrame is not empty\n",
     "    if not df.empty:\n",
-    "        # Obtain list of factually correct case IDs\n",
-    "        correct = correct_case_different_naming(df, False)\n",
+    "        # Obtain list of factually correct config['tf_output'] values\n",
+    "        correct = correct_case_different_naming(df, config, False)\n",
     "        \n",
-    "        # Count the number of rows where the \"Actual Case ID\" matches one of the correct IDs\n",
-    "        matching_rows = df[df['Actual Case ID'].isin(correct)]\n",
+    "        # Count the number of rows where the \"Actual config['tf_output']\" matches one of the correct config['tf_output']\n",
+    "        matching_rows = df[df[f\"Actual {config['tf_output']}'\"].isin(correct)]\n",
     "        \n",
-    "        # Calculate the proportion of factually matching case IDs\n",
+    "        # Calculate the proportion of factually matching config['tf_output'] values\n",
     "        proportion_factual_matching = len(matching_rows) / len(df)\n",
     "        \n",
     "        # Print the result\n",
-    "        print(f\"Furthermore, {len(matching_rows)} of {len(df)} case ID{'s' if len(df) != 1 else ''} \"\n",
-    "              f\"{'was' if len(matching_rows) == 1 else 'were'} determined factually correctly. \"\n",
-    "              f\"This corresponds to a factual accuracy of {proportion_factual_matching:.2%}.\")\n",
+    "        print(f\"Furthermore, {len(matching_rows)} of {len(df)} {config['tf_output']} \"\n",
+    "              f\"value{'s' if len(df) != 1 else ''} {'was' if len(matching_rows) == 1 else 'were'} determined factually \"\n",
+    "              f\"correctly. This corresponds to a factual accuracy of {proportion_factual_matching:.2%}.\")\n",
     "    else:\n",
     "        # Print message if DataFrame is empty\n",
     "        print(\"DataFrame is empty. Cannot calculate factual accuracy.\")\n",
@@ -302,43 +304,52 @@
     "    return proportion_factual_matching\n",
     "\n",
     "\n",
-    "def completely_correct_cases(df: pd.DataFrame) -> float:\n",
+    "def completely_correct_cases(df: pd.DataFrame, config: dict) -> float:\n",
     "    \"\"\"\n",
-    "    Calculate and print the proportion of completely correct case IDs.\n",
+    "    Calculate and print the proportion of completely correct config['tf_output'] values.\n",
     "\n",
-    "    A completely correct case ID is one where the 'Actual Case ID' matches the 'Determined Case ID'\n",
-    "    for all rows where it appears, and vice versa.\n",
+    "    A completely correct config['tf_output'] value is one where the 'Actual config['tf_output']' matches the \n",
+    "    'Determined config['tf_output']' for all rows where it appears, and vice versa.\n",
     "\n",
-    "    :param df: DataFrame with 'Actual Case ID' and 'Determined Case ID' columns, representing actual and \n",
-    "     determined case IDs.\n",
-    "    :return: Proportion of completely correct case IDs.\n",
+    "    :param df: DataFrame with 'Actual config['tf_output']' and 'Determined config['tf_output']' columns, representing \n",
+    "     actual and determined config['tf_output'] values.\n",
+    "    :param config: Configuration parameters.\n",
+    "    :return: Proportion of completely correct config['tf_output'] values.\n",
     "    \"\"\"\n",
     "    proportion_completely_correct = 0\n",
     "\n",
     "    # Check if DataFrame is not empty\n",
     "    if not df.empty:\n",
-    "        # Get unique case IDs\n",
-    "        cases = df['Actual Case ID'].unique()\n",
+    "        # Get unique config['tf_output'] values\n",
+    "        cases = df[f\"Actual {config['tf_output']}'\"].unique()\n",
     "\n",
     "        matching_values = []\n",
     "\n",
-    "        # Iterate through unique case IDs\n",
+    "        # Iterate through unique config['tf_output'] values\n",
     "        for case_id in cases:\n",
-    "            # Filter rows for the current 'Actual Case ID'\n",
-    "            subset_actual = df[df['Actual Case ID'] == case_id]\n",
+    "            # Filter rows for the current 'Actual config['tf_output']'\n",
+    "            subset_actual = df[df[f\"Actual {config['tf_output']}'\"] == case_id]\n",
     "\n",
-    "            # Check if 'Actual Case ID' equals 'Determined Case ID' for all rows\n",
-    "            condition_1 = all(subset_actual['Actual Case ID'] == subset_actual['Determined Case ID'])\n",
+    "            # Check if 'Actual config['tf_output']' equals 'Determined config['tf_output']' for all rows\n",
+    "            condition_1 = all(\n",
+    "                subset_actual[\n",
+    "                    f\"Actual {config['tf_output']}'\"\n",
+    "                ] == subset_actual[f\"Determined {config['tf_output']}'\"]\n",
+    "            )\n",
     "\n",
     "            # If condition 1 is not met, move to the next case\n",
     "            if not condition_1:\n",
     "                continue\n",
     "\n",
-    "            # Filter rows for the current 'Determined Case ID'\n",
-    "            subset_determined = df[df['Determined Case ID'] == case_id]\n",
+    "            # Filter rows for the current 'Determined config['tf_output']'\n",
+    "            subset_determined = df[df[f\"Determined {config['tf_output']}'\"] == case_id]\n",
     "\n",
-    "            # Check if 'Determined Case ID' equals 'Actual Case ID' for all rows\n",
-    "            condition_2 = all(subset_determined['Determined Case ID'] == subset_determined['Actual Case ID'])\n",
+    "            # Check if 'Determined config['tf_output']' equals 'Actual config['tf_output']' for all rows\n",
+    "            condition_2 = all(\n",
+    "                subset_determined[\n",
+    "                    f\"Determined {config['tf_output']}'\"\n",
+    "                ] == subset_determined[f\"Actual {config['tf_output']}'\"]\n",
+    "            )\n",
     "\n",
     "            # If both conditions are true, add the value to the array\n",
     "            if condition_2:\n",
@@ -371,63 +382,69 @@
     "    return proportion_completely_correct\n",
     "\n",
     "\n",
-    "def correct_case_different_naming(df: pd.DataFrame, calculation: bool = True) -> Union[List[str], float]:\n",
+    "def correct_case_different_naming(df: pd.DataFrame, config: dict, calculation: bool = True) -> Union[List[str], float]:\n",
     "    \"\"\"\n",
-    "    Calculate and print the proportion of factually completely correct case IDs.\n",
+    "    Calculate and print the proportion of factually completely correct config['tf_output'] values.\n",
     "\n",
-    "    A factually completely correct case ID is one where the determined case ID is different from the actual case ID, yet\n",
-    "    uniquely maps back to the same actual case ID.\n",
+    "    A factually completely correct config['tf_output'] value is one where the determined config['tf_output'] is \n",
+    "    different from the actual config['tf_output'], yet uniquely maps back to the same actual config['tf_output'] value.\n",
     "\n",
-    "    :param df: DataFrame with 'Actual Case ID' and 'Determined Case ID' columns, representing actual and determined \n",
-    "     case IDs.\n",
-    "    :param calculation: If True, calculate the proportion of factually completely correct case IDs. If False, return \n",
-    "     the list of factually completely correct case IDs.\n",
-    "    :return: Proportion of factually completely correct case IDs if calculation is True, otherwise return the list of \n",
-    "     factually completely correct case IDs.\n",
+    "    :param df: DataFrame with 'Actual config['tf_output']' and 'Determined config['tf_output']' columns, representing \n",
+    "     actual and determined config['tf_output'] values.\n",
+    "    :param config: Configuration parameters.\n",
+    "    :param calculation: If True, calculate the proportion of factually completely correct config['tf_output'] values.\n",
+    "     If False, return the list of factually completely correct config['tf_output'] values.\n",
+    "    :return: Proportion of factually completely correct config['tf_output'] values if calculation is True, otherwise \n",
+    "     return the list of factually completely correct config['tf_output'] values.\n",
     "    \"\"\"\n",
     "    proportion_correct_different_naming = 0\n",
     "\n",
     "    # Check if DataFrame is not empty\n",
     "    if not df.empty:\n",
-    "        # Extract unique actual case IDs\n",
-    "        cases = df['Actual Case ID'].unique()\n",
+    "        # Extract unique actual config['tf_output'] values\n",
+    "        cases = df[f\"Actual {config['tf_output']}'\"].unique()\n",
     "\n",
     "        # Lists to store correct cases and their corresponding values\n",
     "        correct_cases = []\n",
     "        corresponding_values = []\n",
     "\n",
-    "        # Iterate over each unique actual case ID\n",
+    "        # Iterate over each unique actual config['tf_output'] value\n",
     "        for case_id in cases:\n",
-    "            # Filter DataFrame to include only rows with current actual case ID\n",
-    "            subset_actual = df[df['Actual Case ID'] == case_id]\n",
+    "            # Filter DataFrame to include only rows with current actual config['tf_output'] value\n",
+    "            subset_actual = df[df[f\"Actual {config['tf_output']}'\"] == case_id]\n",
     "\n",
-    "            # Check if there's only one unique determined case ID for the current actual case ID\n",
-    "            condition_1 = len(subset_actual['Determined Case ID'].unique()) == 1\n",
+    "            # Check if there's only one unique determined config['tf_output'] value \n",
+    "            # for the current actual config['tf_output'] value\n",
+    "            condition_1 = len(subset_actual[f\"Determined {config['tf_output']}'\"].unique()) == 1\n",
     "\n",
     "            # If condition_1 is not met, skip to the next case\n",
     "            if not condition_1:\n",
     "                continue\n",
     "\n",
-    "            # Get the unique determined case ID for the current actual case ID\n",
-    "            unique_value = subset_actual['Determined Case ID'].iloc[0]\n",
+    "            # Get the unique determined config['tf_output'] value for the current actual config['tf_output'] value\n",
+    "            unique_value = subset_actual[f\"Determined {config['tf_output']}'\"].iloc[0]\n",
     "\n",
-    "            # Check if the determined case ID is different from the actual case ID\n",
+    "            # Check if the determined config['tf_output'] value is different from the actual config['tf_output'] value\n",
     "            condition_2 = unique_value != case_id\n",
     "\n",
-    "            # If the determined case ID is the same as the actual case ID, skip to the next case\n",
+    "            # If the determined config['tf_output'] value is the same as the actual config['tf_output'] value, \n",
+    "            # skip to the next case\n",
     "            if not condition_2:\n",
     "                continue\n",
     "\n",
-    "            # Check if the determined case ID is uniquely associated with the current actual case ID\n",
+    "            # Check if the determined config['tf_output'] value is uniquely associated \n",
+    "            # with the current actual config['tf_output'] value\n",
     "            condition_3 = not df[\n",
-    "                (df['Determined Case ID'] == unique_value) & (df['Actual Case ID'] != case_id)].any().any()\n",
+    "                (df[f\"Determined {config['tf_output']}'\"] == unique_value) & \n",
+    "                (df[f\"Actual {config['tf_output']}'\"] != case_id)\n",
+    "            ].any().any()\n",
     "\n",
     "            # If condition_3 is met, add the current case to correct_cases list\n",
     "            if condition_3:\n",
     "                correct_cases.append(case_id)\n",
     "                corresponding_values.append(unique_value)\n",
     "        \n",
-    "        # If calculation is False, return the list of factually completely correct case IDs\n",
+    "        # If calculation is False, return the list of factually completely correct config['tf_output'] values\n",
     "        if not calculation:\n",
     "            return correct_cases\n",
     "\n",
@@ -444,7 +461,7 @@
     "                    f\"This is the case with ID {correct_cases[0]} and corresponding, determined ID \"\n",
     "                    f\"{corresponding_values[0]}.\", end=' ')\n",
     "            else:\n",
-    "                # Print pairs of actual case ID and determined case ID\n",
+    "                # Print pairs of actual config['tf_output'] values and determined config['tf_output'] values\n",
     "                pairs = [f\"{actual_case_id} → {determined_case_id}\" for actual_case_id, determined_case_id\n",
     "                         in zip(correct_cases, corresponding_values)]\n",
     "                print(f\"These are the cases (actual case ID → determined case ID): {', '.join(pairs[:-1])} and \"\n",
@@ -462,26 +479,27 @@
     "    return proportion_correct_different_naming\n",
     "\n",
     "\n",
-    "def evaluate_model_metrics(df: pd.DataFrame) -> None:\n",
+    "def evaluate_model_metrics(df: pd.DataFrame, config: dict) -> None:\n",
     "    \"\"\"\n",
     "    Evaluate model metrics based on the determined log.\n",
     "\n",
     "    :param df: DataFrame containing determined log.\n",
+    "    :param config: Configuration parameters.\n",
     "    \"\"\"\n",
     "    # Calculate and print the proportion of matching cases\n",
-    "    matching = matching_proportion(df)\n",
+    "    matching = matching_proportion(df, config)\n",
     "    \n",
     "    # Calculate and print the proportion of factually matching cases\n",
-    "    factual_matching = factual_matching_proportion(df)\n",
+    "    factual_matching = factual_matching_proportion(df, config)\n",
     "    \n",
     "    # Print the overall accuracy\n",
     "    print(f\"Thus, the overall accuracy is {(matching + factual_matching):.2%}.\")\n",
     "\n",
     "    # Calculate the proportion of completely correct cases\n",
-    "    correct_proportion = completely_correct_cases(df)\n",
+    "    correct_proportion = completely_correct_cases(df, config)\n",
     "\n",
     "    # Calculate the proportion of factually completely correct cases with different naming\n",
-    "    factual_correct_proportion = correct_case_different_naming(df)\n",
+    "    factual_correct_proportion = correct_case_different_naming(df, config)\n",
     "\n",
     "    # Print the overall case accuracy\n",
     "    print(f\"Thus, the overall case accuracy is {(correct_proportion + factual_correct_proportion):.2%}.\")\n"
@@ -495,7 +513,7 @@
     "tags": []
    },
    "source": [
-    "## Baseline Model \n",
+    "## Baseline \n",
     "**Input = 'Activity'**"
    ]
   },
@@ -987,7 +1005,7 @@
     "print('-' * 80)\n",
     "\n",
     "# Evaluate model metrics based on the determined log\n",
-    "evaluate_model_metrics(log)\n"
+    "evaluate_model_metrics(log, config)\n"
    ]
   },
   {
@@ -1477,7 +1495,7 @@
     "print('-' * 80)\n",
     "\n",
     "# Evaluate model metrics based on the determined log\n",
-    "evaluate_model_metrics(log)\n"
+    "evaluate_model_metrics(log, config)\n"
    ]
   },
   {
@@ -1487,8 +1505,8 @@
     "tags": []
    },
    "source": [
-    "## First Extension\n",
-    "**Input = Multiple Discrete Attributes (Activity and Resource)**"
+    "## Multiple Discrete Attributes\n",
+    "**Input = Activity and Resource**"
    ]
   },
   {
@@ -1979,7 +1997,7 @@
     "print('-' * 80)\n",
     "\n",
     "# Evaluate model metrics based on the determined log\n",
-    "evaluate_model_metrics(log)\n"
+    "evaluate_model_metrics(log, config)\n"
    ]
   },
   {
@@ -2469,7 +2487,7 @@
     "print('-' * 80)\n",
     "\n",
     "# Evaluate model metrics based on the determined log\n",
-    "evaluate_model_metrics(log)\n"
+    "evaluate_model_metrics(log, config)\n"
    ]
   }
  ],
