--- a/quality_metrics.ipynb
+++ b/quality_metrics.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-18T11:08:00.580783Z",
-     "start_time": "2024-04-18T11:07:55.394216Z"
+     "end_time": "2024-04-19T06:40:28.634099Z",
+     "start_time": "2024-04-19T06:40:25.858372Z"
     }
    },
    "cell_type": "code",
@@ -30,13 +30,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-18T11:08:04.095838Z",
-     "start_time": "2024-04-18T11:08:04.046178Z"
+     "end_time": "2024-04-19T06:40:29.722763Z",
+     "start_time": "2024-04-19T06:40:29.679667Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "def calculate_completely_correct_cases(predicted_df: pd.DataFrame, correct_df: pd.DataFrame) -> float:\n",
+    "def calculate_completely_correct_cases(predicted_df: pd.DataFrame, correct_df: pd.DataFrame, column: str) -> float:\n",
     "    \"\"\"\n",
     "    Calculate the proportion of completely correct Case ID values.\n",
     "\n",
@@ -45,6 +45,7 @@
     "\n",
     "    :param predicted_df: DataFrame containing Determined Case ID values.\n",
     "    :param correct_df: DataFrame containing Case ID values.\n",
+    "    :param column: Column to evaluate accuracy.\n",
     "    :return: Proportion of completely correct Case ID values.\n",
     "    \"\"\"\n",
     "    if predicted_df.empty or correct_df.empty:\n",
@@ -56,15 +57,15 @@
     "        subset_correct = correct_df[correct_df['Case ID'] == case_id]\n",
     "        subset_predicted = predicted_df.loc[subset_correct.index]\n",
     "\n",
-    "        condition_1 = all(subset_correct['Case ID'] == subset_predicted['Determined Case ID'])\n",
+    "        condition_1 = all(subset_correct['Case ID'] == subset_predicted[column])\n",
     "\n",
     "        if not condition_1:\n",
     "            continue\n",
     "\n",
-    "        subset_determined = predicted_df[predicted_df['Determined Case ID'] == case_id]\n",
+    "        subset_determined = predicted_df[predicted_df[column] == case_id]\n",
     "        subset_cases = correct_df.loc[subset_determined.index]\n",
     "\n",
-    "        condition_2 = all(subset_determined['Determined Case ID'] == subset_cases['Case ID'])\n",
+    "        condition_2 = all(subset_determined[column] == subset_cases['Case ID'])\n",
     "\n",
     "        if condition_2:\n",
     "            correct_cases.append(case_id)\n",
@@ -74,7 +75,7 @@
     "    return proportion_completely_correct\n",
     "\n",
     "\n",
-    "def calculate_correct_case_different_naming(predicted_df: pd.DataFrame, correct_df: pd.DataFrame,\n",
+    "def calculate_correct_case_different_naming(predicted_df: pd.DataFrame, correct_df: pd.DataFrame, column: str,\n",
     "                                            calculation: bool = True) -> Union[pd.DataFrame, float]:\n",
     "    \"\"\"\n",
     "    Calculate the proportion of factually completely correct Case ID values.\n",
@@ -84,6 +85,7 @@
     "\n",
     "    :param predicted_df: DataFrame containing Determined Case ID values.\n",
     "    :param correct_df: DataFrame containing Case ID values.\n",
+    "    :param column: Column to evaluate accuracy.\n",
     "    :param calculation: If True, calculate the proportion of factually completely correct Case ID values.\n",
     "                        If False, return the list of factually completely correct Case ID values.\n",
     "    :return: Proportion of factually completely correct Case ID values if calculation is True,\n",
@@ -98,19 +100,19 @@
     "        subset_correct = correct_df[correct_df['Case ID'] == case_id]\n",
     "        subset_predicted = predicted_df.loc[subset_correct.index]\n",
     "\n",
-    "        condition_1 = len(subset_predicted['Determined Case ID'].unique()) == 1\n",
+    "        condition_1 = len(subset_predicted[column].unique()) == 1\n",
     "\n",
     "        if not condition_1:\n",
     "            continue\n",
     "\n",
-    "        unique_value = subset_predicted['Determined Case ID'].iloc[0]\n",
+    "        unique_value = subset_predicted[column].iloc[0]\n",
     "\n",
     "        condition_2 = unique_value != case_id\n",
     "\n",
     "        if not condition_2:\n",
     "            continue\n",
     "\n",
-    "        condition_3 = not predicted_df[(predicted_df['Determined Case ID'] == unique_value) &\n",
+    "        condition_3 = not predicted_df[(predicted_df[column] == unique_value) & \n",
     "                                       (correct_df['Case ID'] != case_id)].any().any()\n",
     "\n",
     "        if condition_3:\n",
@@ -125,52 +127,56 @@
     "    return proportion_correct_different_naming\n",
     "\n",
     "\n",
-    "def calculate_factual_matching_proportion(predicted_df: pd.DataFrame, correct_df: pd.DataFrame) -> float:\n",
+    "def calculate_factual_matching_proportion(predicted_df: pd.DataFrame, correct_df: pd.DataFrame, column: str) -> float:\n",
     "    \"\"\"\n",
     "    Calculate the proportion of factually matching Case ID values.\n",
     "\n",
     "    :param predicted_df: DataFrame containing Determined Case ID values.\n",
     "    :param correct_df: DataFrame containing Case ID values.\n",
+    "    :param column: Column to evaluate accuracy.\n",
     "    :return: Proportion of factually matching Case ID values.\n",
     "    \"\"\"\n",
     "    if predicted_df.empty or correct_df.empty:\n",
     "        return 0\n",
     "\n",
-    "    matching_rows = calculate_correct_case_different_naming(predicted_df, correct_df, False)\n",
+    "    matching_rows = calculate_correct_case_different_naming(predicted_df, correct_df, column, False)\n",
     "    proportion_factual_matching = len(matching_rows) / len(predicted_df) * 100\n",
     "\n",
     "    return proportion_factual_matching\n",
     "\n",
     "\n",
-    "def calculate_matching_proportion(predicted_df: pd.DataFrame, correct_df: pd.DataFrame) -> float:\n",
+    "def calculate_matching_proportion(predicted_df: pd.DataFrame, correct_df: pd.DataFrame, column: str) -> float:\n",
     "    \"\"\"\n",
     "    Calculate the proportion of matching Case ID values.\n",
     "\n",
     "    :param predicted_df: DataFrame containing Determined Case ID values.\n",
     "    :param correct_df: DataFrame containing Case ID values.\n",
+    "    :param column: Column to evaluate accuracy.\n",
     "    :return: Proportion of matching Case ID values.\n",
     "    \"\"\"\n",
     "    if predicted_df.empty or correct_df.empty:\n",
     "        return 0\n",
     "\n",
-    "    matching_rows = predicted_df[predicted_df['Determined Case ID'] == correct_df['Case ID']]\n",
+    "    matching_rows = predicted_df[predicted_df[column] == correct_df['Case ID']]\n",
     "    proportion_matching = len(matching_rows) / len(predicted_df) * 100\n",
     "\n",
     "    return proportion_matching\n",
     "\n",
     "\n",
-    "def evaluate_accuracy(predicted_df: pd.DataFrame, complete_df: pd.DataFrame) -> dict:\n",
+    "def evaluate_accuracy(predicted_df: pd.DataFrame, complete_df: pd.DataFrame, \n",
+    "                      column: str = 'Determined Case ID') -> dict:\n",
     "    \"\"\"\n",
     "    Evaluate the accuracy of the repaired log.\n",
     "\n",
     "    :param predicted_df: DataFrame containing the determined log.\n",
     "    :param complete_df: DataFrame containing complete log.\n",
+    "    :param column: Column to evaluate accuracy. Default is 'Determined Case ID'.\n",
     "    :return: Dictionary containing the quality metrics.\n",
     "    \"\"\"\n",
-    "    matching = calculate_matching_proportion(predicted_df, complete_df)\n",
-    "    factual_matching = calculate_factual_matching_proportion(predicted_df, complete_df)\n",
-    "    correct_proportion = calculate_completely_correct_cases(predicted_df, complete_df)\n",
-    "    factual_correct_proportion = calculate_correct_case_different_naming(predicted_df, complete_df)\n",
+    "    matching = calculate_matching_proportion(predicted_df, complete_df, column)\n",
+    "    factual_matching = calculate_factual_matching_proportion(predicted_df, complete_df, column)\n",
+    "    correct_proportion = calculate_completely_correct_cases(predicted_df, complete_df, column)\n",
+    "    factual_correct_proportion = calculate_correct_case_different_naming(predicted_df, complete_df, column)\n",
     "\n",
     "    return {\n",
     "        \"Accuracy\": matching,\n",
@@ -188,8 +194,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-18T11:08:05.260317Z",
-     "start_time": "2024-04-18T11:08:05.235333Z"
+     "end_time": "2024-04-19T06:40:30.486387Z",
+     "start_time": "2024-04-19T06:40:30.470757Z"
     }
    },
    "cell_type": "code",
@@ -215,8 +221,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-18T11:08:06.119957Z",
-     "start_time": "2024-04-18T11:08:06.100157Z"
+     "end_time": "2024-04-19T06:40:31.216195Z",
+     "start_time": "2024-04-19T06:40:31.184184Z"
     }
    },
    "cell_type": "code",
@@ -248,9 +254,10 @@
     "\n",
     "                    if i == 1:\n",
     "                        completeness = evaluate_completeness(predicted_log, 'Original Case ID')\n",
-    "                        quality_metrics = quality_metrics.append({\"Iteration\": 0, \"Completeness\": completeness},\n",
-    "                                                                 ignore_index=True)\n",
-    "\n",
+    "                        iteration_metrics = {\"Iteration\": 0, \"Completeness\": completeness}\n",
+    "                        accuracy = evaluate_accuracy(predicted_log, complete_log, 'Original Case ID')\n",
+    "                        iteration_metrics.update(accuracy)\n",
+    "                        quality_metrics = quality_metrics.append(iteration_metrics, ignore_index=True)\n",
     "                    completeness = evaluate_completeness(predicted_log)\n",
     "                    iteration_metrics = {\"Iteration\": i, \"Completeness\": completeness}\n",
     "                    accuracy = evaluate_accuracy(predicted_log, complete_log)\n",
@@ -266,8 +273,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-18T11:08:07.022668Z",
-     "start_time": "2024-04-18T11:08:07.003946Z"
+     "end_time": "2024-04-19T06:40:32.205071Z",
+     "start_time": "2024-04-19T06:40:32.173420Z"
     }
    },
    "cell_type": "code",
@@ -295,8 +302,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-18T11:08:07.751320Z",
-     "start_time": "2024-04-18T11:08:07.726668Z"
+     "end_time": "2024-04-19T06:40:32.960420Z",
+     "start_time": "2024-04-19T06:40:32.930967Z"
     }
    },
    "cell_type": "code",
@@ -344,8 +351,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-18T11:09:14.269959Z",
-     "start_time": "2024-04-18T11:08:09.366058Z"
+     "end_time": "2024-04-19T06:40:46.555288Z",
+     "start_time": "2024-04-19T06:40:34.014240Z"
     }
    },
    "cell_type": "code",
@@ -368,7 +375,7 @@
       "+-------------+----------------+------------+--------------------+--------------------+----------------------+-------------------------+-------------------------+\n",
       "|   Iteration | Completeness   | Accuracy   | Factual Accuracy   | Overall Accuracy   | Real Case Accuracy   | Factual Case Accuracy   | Overall Case Accuracy   |\n",
       "+=============+================+============+====================+====================+======================+=========================+=========================+\n",
-      "|           0 | 80.95%         |            |                    |                    |                      |                         |                         |\n",
+      "|           0 | 80.95%         | 80.95%     | 0.00%              | 80.95%             | 33.33%               | 0.00%                   | 33.33%                  |\n",
       "+-------------+----------------+------------+--------------------+--------------------+----------------------+-------------------------+-------------------------+\n",
       "|           1 | 97.62%         | 83.33%     | 0.00%              | 83.33%             | 33.33%               | 0.00%                   | 33.33%                  |\n",
       "+-------------+----------------+------------+--------------------+--------------------+----------------------+-------------------------+-------------------------+\n",
@@ -378,14 +385,6 @@
     }
    ],
    "execution_count": 7
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "b79f3ec64ccd7794"
   }
  ],
  "metadata": {
